# Colber

./: .gitattributes  .gitignore  .prettierignore  ARCHITECTURE_BREAKDOWN.md  AgentStack_Cahier_des_charges.docx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_BRIEF.md  NOTICE  ONBOARDING.md  PLAN_DE_DEVELOPPEMENT.md  README.md  ROADMAP.md  SECURITY.md  STATUS.md  eslint.config.js  package.json  pnpm-lock.yaml  smithery.yaml  tsconfig.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release-colber-autogen.yml  release-colber-crewai.yml  release-colber-langchain.yml  release-langchain-colber.yml
.husky/: pre-commit
.tools/: _rebrand.py  e2e_smoke.py  ssh_push.py  ssh_remote.py  ssh_run.py
apps/agent-identity/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  vitest.config.ts
apps/agent-identity/drizzle/: 0000_init.sql
apps/agent-identity/proto/: identity.proto
apps/agent-identity/src/: config.ts  server.ts
apps/colber-autogen/: README.md  pyproject.toml
apps/colber-autogen/src/colber_autogen/: __init__.py  _client.py  instrumentation.py  memory.py  toolkit.py
apps/colber-autogen/src/colber_autogen/tools/: __init__.py  _base.py  identity.py  insurance.py  memory.py  negotiation.py  reputation.py
apps/colber-autogen/tests/: __init__.py  conftest.py  test_client.py  test_instrumentation.py  test_memory.py  test_toolkit.py  test_tools.py
apps/colber-crewai/: README.md  pyproject.toml
apps/colber-crewai/src/colber_crewai/: __init__.py  _client.py  callbacks.py  memory.py  toolkit.py
apps/colber-crewai/src/colber_crewai/tools/: __init__.py  _base.py  identity.py  insurance.py  memory.py  negotiation.py  reputation.py
apps/colber-crewai/tests/: __init__.py  conftest.py  test_callbacks.py  test_client.py  test_memory.py  test_toolkit.py  test_tools.py
apps/colber-langchain/: README.md  pyproject.toml
apps/colber-langchain/tests/: conftest.py  test_callbacks.py  test_memory.py  test_toolkit.py  test_tools.py
apps/insurance/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/insurance/drizzle/: 0000_init.sql
apps/insurance/proto/: insurance.proto
apps/insurance/src/: config.ts  server.ts
apps/langchain-colber/: LICENSE  README.md  pyproject.toml
apps/langchain-colber/src/langchain_colber/: __init__.py  _client.py  callbacks.py  memory.py  toolkit.py
apps/langchain-colber/src/langchain_colber/tools/: __init__.py  _base.py  identity.py  insurance.py  memory.py  negotiation.py  reputation.py
apps/langchain-colber/tests/: conftest.py  test_callbacks.py  test_memory.py  test_toolkit.py  test_tools.py
apps/mcp-server/: .env.example  Dockerfile  README.md  package.json  server.json  tsconfig.eslint.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/mcp-server/src/: config.ts  errors.ts  logger.ts  server.ts
apps/mcp-server/test/: helpers.ts
apps/memory/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  vitest.config.ts
apps/memory/drizzle/: 0000_init.sql
apps/memory/proto/: memory.proto
apps/memory/src/: config.ts  server.ts
apps/negotiation/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/negotiation/drizzle/: 0000_init.sql
apps/negotiation/proto/: negotiation.proto
apps/negotiation/src/: config.ts  server.ts
apps/observability/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/observability/drizzle/: 0000_init.sql
apps/observability/proto/: observability.proto
apps/observability/src/: config.ts  server.ts
apps/reputation/: .dockerignore  .env.example  Dockerfile  README.md  drizzle.config.ts  package.json  tsconfig.eslint.json  vitest.config.ts
apps/reputation/drizzle/: 0000_init.sql
apps/reputation/proto/: reputation.proto
apps/reputation/src/: config.ts  server.ts
apps/sdk-python/: LICENSE  README.md  pyproject.toml
apps/sdk-python/src/colber_sdk/: _http.py  envelope.py  types.py
apps/sdk-python/src/colber_sdk/services/: _convert.py  identity.py  insurance.py  negotiation.py  reputation.py
apps/sdk-python/src/praxis_sdk/: __init__.py  _http.py  client.py  envelope.py  errors.py  types.py
apps/sdk-python/src/praxis_sdk/crypto/: __init__.py  _codec.py  did_key.py  jcs.py  signing.py
apps/sdk-python/src/praxis_sdk/services/: __init__.py  _convert.py  memory.py  observability.py
apps/sdk-python/tests/: _helpers.py  conftest.py  test_client.py  test_envelope.py  test_errors.py
apps/sdk-python/tests/crypto/: test_did_key.py  test_jcs.py  test_signing.py
apps/sdk-python/tests/services/: test_identity.py  test_insurance.py  test_memory.py  test_negotiation.py  test_observability.py  test_reputation.py
apps/sdk-typescript/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/site/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  next.config.ts  nginx.conf  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
colber-stack/: .env.example  README.md  docker-compose.services.yml  docker-compose.yml  services.env.example
colber-stack/observability/: grafana-datasources.yml  prometheus.yml
docs/: ARCHITECTURE_BREAKDOWN.md  DEPLOY.md  DESIGN_BRIEF.md  MCP_REGISTRIES.md  ONBOARDING.md  PLAN_DE_DEVELOPPEMENT.md  ROADMAP.md  STATUS.md
docs/diagrams/: README.md  colber-functional-hub.md  colber-functional.md  colber-workflow-a2a.md  praxis-functional-hub.md  praxis-functional.md  praxis-workflow-a2a.md  praxis-workflow-phases.md
praxis-stack/: .env.example  DEPLOY.md  README.md  docker-compose.services.yml  docker-compose.yml
praxis-stack/observability/: prometheus.yml
tooling/eslint-config/: index.js  node.js  package.json
tooling/tsconfig/: base.json  node-app.json  node-lib.json  package.json
(+270 files in other folders)
