[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "colber-autogen"
version = "0.1.0"
description = "AutoGen 0.4+ integration for the Colber platform — per-tool observability, AutoGen Memory adapter, and a 5-service toolkit of typed BaseTool[Args, Result] subclasses."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Johan / Colber", email = "dof1502.mwm27@gmail.com" }]
keywords = [
    "colber",
    "autogen",
    "autogen-agentchat",
    "autogen-core",
    "agent",
    "ai-agent",
    "agentic-economy",
    "tools",
    "memory",
    "observability",
    "reputation",
    "negotiation",
    "insurance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# AutoGen 0.4 (the late-2024/2025 Microsoft redesign) is a hard
# break from the legacy ``pyautogen`` 0.2 line. We target 0.4+ because
# that's the line that ships:
#   - the typed ``BaseTool[ArgsT, ReturnT]`` base in ``autogen_core.tools``,
#   - the ``Memory`` protocol in ``autogen_core.memory`` with
#     ``add`` / ``query`` / ``update_context`` / ``clear`` / ``close``,
#   - the new ``AssistantAgent`` in ``autogen_agentchat.agents`` that
#     accepts a list of ``BaseTool`` instances directly.
# Pinned ``<1`` until a stable v1 cut.
dependencies = [
    "autogen-agentchat>=0.4,<1",
    "autogen-core>=0.4,<1",
    "colber-sdk>=0.1.1,<0.2",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://colber.dev"
Repository = "https://github.com/Obi49/Colber"
Issues = "https://github.com/Obi49/Colber/issues"
Documentation = "https://github.com/Obi49/Colber#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/colber_autogen"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/colber_autogen"]

[[tool.mypy.overrides]]
# AutoGen 0.4 ships partial type stubs and several public re-exports
# remain untyped (e.g. portions of ``autogen_agentchat.messages``).
# The plugin keeps strict typing on its OWN surface but cannot force
# AutoGen's. Falling back to ``ignore_missing_imports`` for the imported
# framework modules so ``mypy --strict`` stays green on the adapter
# without being held hostage to upstream type drift.
module = [
    "autogen_agentchat",
    "autogen_agentchat.*",
    "autogen_core",
    "autogen_core.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
