[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "colber-crewai"
version = "0.1.0"
description = "CrewAI integration for the Colber platform — step/task callbacks, long-term memory, and a 5-service toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Johan / Colber", email = "dof1502.mwm27@gmail.com" }]
keywords = [
    "colber",
    "crewai",
    "agent",
    "ai-agent",
    "agentic-economy",
    "tools",
    "memory",
    "observability",
    "callbacks",
    "reputation",
    "negotiation",
    "insurance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
# CrewAI 0.80+ stabilised the ``step_callback``/``task_callback`` plain-callable
# convention plus the ``LongTermMemory`` / ``LongTermMemoryItem`` storage
# interface this plugin extends. Older versions either lacked the public
# extension point on long-term memory (pre-0.70) or shipped a different
# step-callback signature (pre-0.80). Pinned ``<1`` until a stable v1 cut.
dependencies = [
    "crewai>=0.80,<1",
    "colber-sdk>=0.1.1,<0.2",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://colber.dev"
Repository = "https://github.com/Obi49/Colber"
Issues = "https://github.com/Obi49/Colber/issues"
Documentation = "https://github.com/Obi49/Colber#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/colber_crewai"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/colber_crewai"]

[[tool.mypy.overrides]]
# CrewAI ships partial type stubs and many of its public re-exports are
# untyped. The plugin keeps strict typing on its OWN surface but cannot
# force CrewAI's. Falling back to ``ignore_missing_imports`` for the
# imported framework modules so ``mypy --strict`` stays green on the
# adapter without being held hostage to upstream type drift.
module = ["crewai", "crewai.*", "crewai_tools", "crewai_tools.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
