[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "langchain-colber"
version = "0.1.0"
description = "LangChain integration for the Colber platform — callbacks, memory, and a 6-service toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Johan / Colber", email = "dof1502.mwm27@gmail.com" }]
keywords = [
    "colber",
    "langchain",
    "agent",
    "ai-agent",
    "agentic-economy",
    "tools",
    "memory",
    "observability",
    "callbacks",
    "reputation",
    "negotiation",
    "insurance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "langchain-core>=0.3,<0.4",
    "colber-sdk>=0.1.1,<0.2",
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://colber.dev"
Repository = "https://github.com/Obi49/Colber"
Issues = "https://github.com/Obi49/Colber/issues"
Documentation = "https://github.com/Obi49/Colber#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_colber"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/langchain_colber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
