[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "colber-sdk"
version = "0.1.1"
description = "Official Python SDK for the Colber platform (identity, reputation, memory, observability, negotiation, insurance)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Johan / Colber", email = "dof1502.mwm27@gmail.com" }]
keywords = [
    "colber",
    "agent",
    "ai-agent",
    "agentic-economy",
    "did",
    "ed25519",
    "reputation",
    "memory",
    "observability",
    "negotiation",
    "insurance",
    "mcp",
    "a2a",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://colber.dev"
Repository = "https://github.com/Obi49/Colber"
Issues = "https://github.com/Obi49/Colber/issues"
Documentation = "https://github.com/Obi49/Colber#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/colber_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF", "PT"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["src/colber_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers --strict-config"
